fixed navbar and made background visible.

--- a/main/static/css/about.css
+++ b/main/static/css/about.css
@@ -7,7 +7,7 @@ body {
     justify-content: center;
     position: absolute;
     width: 98%;
-    left: 50%; top: auto;
+    left: 50%; top: 100px;
     transform: translate(-50%,0);
     margin-top: 20px;
 }
