--- a/main/static/css/navbar.css
+++ b/main/static/css/navbar.css
@@ -1,16 +1,19 @@
 .navbar {
+    position: fixed;
+    left: 50%;
+    transform: translate(-50%,0);
     z-index: 998;
     color: antiquewhite;
-    background-color: #0e141f;
+    background-color: rgba(14,20,31,0.85);
     display: flex;
     justify-content: space-between;
     align-items: center;
     height: 6.5rem;
     /*margin-top: -7.5px; fix*/
-    /*width: 100%;*/
-    margin: 15px;
+    width: 98%;
+    /*margin: 15px;*/
     border-radius: 25px;
-    backdrop-filter: blur(2px);
+    backdrop-filter: blur(4px);
     -webkit-backdrop-filter: blur(2px);
 }
 
